--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@ a {
     text-decoration: none;
 }
 </style>
-<h1><a href="/index.html">main</h1>
+<h1><a href="index.html">main</h1>
 <div class="row-fluid">
     <div class="span8" style="color:white">
         {{ content }}
