--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -7,10 +7,9 @@ a {
     text-decoration: none;
 }
 </style>
-<h1><a href="/index.html">&lt main</a></h1>
+<h1 style="color:white">main.</h1>
 <div class="row-fluid">
     <div class="span8" style="color:white">
         {{ content }}
     </div>
 </div>
-<h1><a href="/index.html">&lt main</a></h1>
