--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,10 @@ a {
     text-decoration: none;
 }
 </style>
-<h1><a href="/index.html">&lt main</a></h1>
+<h1><a href="/quantumproductions.co/index.html">&lt main</a></h1>
 <div class="row-fluid">
     <div class="span8" style="color:white">
         {{ content }}
     </div>
 </div>
-<h1><a href="/index.html">&lt main</a></h1>
+<h1><a href="/quantumproductions.co/index.html">&lt main</a></h1>
